# Workshop_elective

./: README.md  pandas.ipynb
1/C++/: CMakeLists.txt  readme.md  server.cpp
1/Python/: readme.md  server.py
2/: employees.csv  script.py  вывод.md
